--- a/alcanzaLaboral/Views/Shared/_Layout.cshtml
+++ b/alcanzaLaboral/Views/Shared/_Layout.cshtml
@@ -175,15 +175,18 @@
 
             </div>
         </div>
-        <div class="sidenav">
+        <div id="siden_salir" class="sidenav Ocultar">
+            <button id="fbtn_salir" onclick="Salir()" type="button" class="btn btn-primary salir"></button>
+        </div>
+        <div id="siden_acceder" class="sidenav">
             <button id="this" type="button" class="btn btn-primary arrow"></button>
         </div>
 
         <div id="sidenav" class="sidenav" style="top: 221px;right: 13px;width: 202px; display:none">
-            <button style="padding-left: 8px; margin-left: 25px;" type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#login_mod">Ingresa&nbsp;a&nbsp;tu&nbsp;cuenta</button>
             <button style="margin-left: 87px;padding-left: 8px;" type="button" class="btn btn-primary reg" href="#" data-toggle="modal" data-target="#registro_mod">
                 Registrate
             </button>
+            <button style="padding-left: 8px; margin-left: 25px;" type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#login_mod">Ingresa&nbsp;a&nbsp;tu&nbsp;cuenta</button> 
         </div>
 
     </header><!-- #header -->
@@ -414,6 +417,8 @@
     <script src="~/Scripts/Layout/main.js"></script>
     <script src="~/Scripts/Modulo/General.js"></script>
     <script src="~/Scripts/Layout/wow.min.js"></script>
+    <script src="~/Scripts/jquery.table2excel.min.js"></script>
+    <script src="~/Scripts/icons.js"></script>
     <script>
         wow = new WOW(
             {
