--- a/alcanzaLaboral/Views/Shared/_Layout.cshtml
+++ b/alcanzaLaboral/Views/Shared/_Layout.cshtml
@@ -211,19 +211,19 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Contraseña</label>
-                                    <input type="password" class="form-control" id="pass_reg" placeholder="Ingrese su contraseña">
+                                    <input type="password" class="form-control" id="pass_reg" placeholder="Ingrese su contraseña" onblur="validarPass()">
                                 </div>
                                 <div class="form-group">
                                     <label>Repita su contraseña</label>
-                                    <input type="password" class="form-control" id="rpass_reg" placeholder="Repita su contraseña">
+                                    <input type="password" class="form-control" id="rpass_reg" placeholder="Repita su contraseña" onblur="validarRPass()">
                                 </div>
                                 <div class="form-group">
                                     <label>E-mail de recepción de ofertas</label>
-                                    <input type="text" class="form-control" id="email_reg" placeholder="Ingrese su e-mail" onblur="ValidarCorreo()">
+                                    <input type="text" class="form-control" id="email_reg" placeholder="Ingrese su e-mail" onblur="validarEmail(this)">
                                 </div>
                                 <div class="form-group">
                                     <label>Coloque nuevamente su e-mail</label>
-                                    <input type="text" class="form-control" id="remail_reg" placeholder="Repita su e-mail">
+                                    <input type="text" class="form-control" id="remail_reg" placeholder="Repita su e-mail" onblur="validarEmail(this)">
                                 </div>
                                 <div class="form-group">
                                     <label>Seleccione una pregunta secreta</label>
@@ -312,7 +312,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Ingrese su correo</label>
-                                    <input type="email" class="form-control" id="correo_recu" placeholder="Ingrese su correo" onblur="ValidarCorreoRecu()">
+                                    <input type="email" class="form-control" id="correo_recu" placeholder="Ingrese su correo" onblur="validarEmail(this)">
                                 </div>
                                 <div class="form-group">
                                     <label>Seleccione una pregunta secreta</label>
