--- a/alcanzaLaboral/Views/Shared/_Layout.cshtml
+++ b/alcanzaLaboral/Views/Shared/_Layout.cshtml
@@ -44,6 +44,12 @@
 </head>
 <body>
 
+    @*<div id='loading_wrap' class="modal" style='background-color: #808080; position:absolute; height:100%; width:100%; overflow:hidden; top:0; left:0; filter:alpha(opacity=50); opacity:0.5;'>
+
+        <img src="~/img/loading.gif" style="width:100px; height:100px; top:50%; right:50%; position:absolute;" />
+
+    </div>*@
+
     <header id="header">
         @*   <div class="header-top">
                 <div class="container-fluid">
@@ -191,12 +197,12 @@
 
     </header><!-- #header -->
     <!-- Modal Registro -->
-    <div class="modal fade" id="registro_mod" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="registro_mod" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"  data-backdrop="static" data-keyboard="false">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">Crear una Cuenta</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button id="btncerrarreg" onclick="cerrarRegistro(this)" type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -239,7 +245,21 @@
                                     <label>Respuesta</label>
                                     <input type="text" class="form-control" id="respuesta_reg" placeholder="Ingrese su respuesta">
                                 </div>
-                                <div class="custom-control custom-checkbox">
+                                <div class="custom-control-inline">
+                                    <label>¿Alguien te ha referido?</label>
+                                    <div class="custom-control custom-radio custom-control-inline" style="margin-left:10px;">
+                                        <input type="radio" id="rbt_siref" name="customRadioInline1" class="custom-control-input">
+                                        <label style="margin-top:2px;" class="custom-control-label" for="rbt_siref">Sí</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="rbt_noref" name="customRadioInline1" class="custom-control-input">
+                                        <label style="margin-top:2px;" class="custom-control-label" for="rbt_noref">No</label>
+                                    </div>
+                                </div>
+                                <div>
+                                    <input type="text" class="form-control" id="email_refe" placeholder="Ingrese correo del que lo refirió" onblur="validaremailref()" disabled>
+                                </div>
+                                <div class="custom-control custom-checkbox" style="margin-top:5px;">
                                     <input type="checkbox" class="custom-control-input" id="chk_terminos">
                                     <label class="custom-control-label" for="chk_terminos">Acepto los <a href="../Inicio/TerminosCondiciones" target="_blank">Términos y Condiciones</a></label>
                                 </div>
@@ -250,7 +270,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="genric-btn primary-border" data-dismiss="modal">Cerrar</button>
+                    <button onclick="cerrarRegistro(this)" type="button" class="genric-btn primary-border" data-dismiss="modal">Cerrar</button>
                     <button id="registrarCandidatosbtn" type="button" class="genric-btn primary" onclick="Registrar_Onclick()">Guardar</button>
                 </div>
             </div>
@@ -258,12 +278,12 @@
     </div>
 
     <!-- Modal Login -->
-    <div class="modal fade" id="login_mod" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="login_mod" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" data-backdrop="static" data-keyboard="false">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">Ingresa a tu cuenta</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button onclick="cerrar_login(this)" type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -274,7 +294,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Usuario</label>
-                                    <input type="email" class="form-control" id="login_usuario" aria-describedby="emailHelp" placeholder="Ingrese su usuario">
+                                    <input type="email" class="form-control" id="login_usuario" aria-describedby="emailHelp" placeholder="Ingrese su usuario" onblur="ValidarUsuarioLogin()">
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputPassword1">Contraseña</label>
@@ -288,15 +308,15 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="genric-btn primary-border" data-dismiss="modal">Cancelar</button>
+                    <button onclick="cerrar_login(this)" type="button" class="genric-btn primary-border" data-dismiss="modal">Cancelar</button>
                     <button type="button" class="genric-btn primary" onclick="Login_Onclick()">Ingresar</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Modal Login -->
-    <div class="modal fade" id="RecuperaPass_mod" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <!-- Modal Recuperar Pass -->
+    <div class="modal fade" id="RecuperaPass_mod" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"  data-backdrop="static" data-keyboard="false">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
